Updated some code of the bloopers page html-file

--- a/Virtual-Murder/Virtual-Murder_files/pages/bloopers.html
+++ b/Virtual-Murder/Virtual-Murder_files/pages/bloopers.html
@@ -42,7 +42,7 @@
 		
 			<h2>Bloopers</h2>
 		
-			<iframe src="http://www.youtube.com/embed/JvlyMgirpTE"
+			<iframe src="http://www.youtube.com/embed/NgagmylMpAI"
 			width="720" height="390" frameborder="0" allowfullscreen></iframe>
 			
 			
