Updated some code in contact.html

--- a/Virtual-Murder/Virtual-Murder_files/pages/contact.html
+++ b/Virtual-Murder/Virtual-Murder_files/pages/contact.html
@@ -53,8 +53,7 @@
 		<div class="h3contact">Main actor / Creator of the website </div>
 		<div class="h4contact">Email: vaezi.danial2002@gmail.com <br>
 		Number: 076 446 97 17<br>
-		Address: Stöckenstrasse 14, 8903 Birmensdorf <br> 
-		Discord: Suicide?#9963 </div>
+		Address: Stöckenstrasse 14, 8903 Birmensdorf </div>
 		
 		
 		</div>
